Pull in r229281 from upstream libc++ (by Larisse Voufo):

Implement C++14's sized deallocation functions, since there are no
  longer implicitly defined by clang, as of r229241.

This allows ports which use C++14's sized deallocation functions, such
as cad/openvsp, to build on stable/10.  Bump __FreeBSD_version to allow
detection from ports.

Direct commit, since stable/11 and head already have newer versions of
libc++ which include this change.

PR:		219484

Former-commit-id: 33bde39ae8009b3388184032241c0e7abb6df5b8